--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        <h1>Hello world</h1>
-        
+        <header class="header">
+            Some text...
+        </header>
     </body>
 </html>
