--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 <h1 class="heading-primary">
                     <span class="heading-primary-main">OUTDOORS</span>
                     <span class="heading-primary-sub">is where life happens</span>
-                </h1>    
+                </h1>
+                <a href="#" class="btn btn-white">Discover our tours</a> 
             </div>
-            
+
         </header>
     </body>
 </html>
